# linux-service-dashboard

./: .clang-format  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  ROADMAP.md  TODO.md
.codesight/: CODESIGHT.md
.github/workflows/: build.yml
build-int/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  linux-service-dashboard  linux-service-dashboard-smart-helper  provider-parser-tests
build-int-dbg/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  linux-service-dashboard-smart-helper  provider-parser-tests
build-int-dbg/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-int-dbg/linux-service-dashboard-smart-helper_autogen/: deps  moc_predefs.h
build-int-dbg/linux-service-dashboard_autogen/: deps  moc_predefs.h
build-int-dbg/linux-service-dashboard_autogen/GQ6NBGVJMG/: moc_DockerProvider.cpp.d  moc_MountProvider.cpp.d  moc_NetworkProvider.cpp.d  moc_SensorProvider.cpp.d  moc_SmartProvider.cpp.d  moc_SystemdServiceProvider.cpp  moc_SystemdServiceProvider.cpp.d
build-int-dbg/linux-service-dashboard_autogen/M4YTXQ7V2H/: moc_DiskModel.cpp  moc_DiskModel.cpp.d  moc_DockerContainerModel.cpp.d  moc_MountModel.cpp  moc_MountModel.cpp.d  moc_SensorModel.cpp.d  moc_ServiceModel.cpp  moc_ServiceModel.cpp.d
build-int-dbg/linux-service-dashboard_autogen/PRMOGMWJPH/: moc_CommandRunner.cpp.d  moc_RefreshScheduler.cpp.d  moc_SmartRefreshScheduler.cpp.d
build-int-dbg/linux-service-dashboard_autogen/RZ4CM6YYJ6/: moc_ConfirmActionDialog.cpp  moc_ConfirmActionDialog.cpp.d  moc_DisksPage.cpp.d  moc_DockerPage.cpp  moc_DockerPage.cpp.d  moc_LogViewerDialog.cpp.d  moc_MountsPage.cpp  moc_MountsPage.cpp.d  moc_OverviewPage.cpp.d  moc_SensorsPage.cpp.d  moc_SettingsPage.cpp.d  moc_SystemdPage.cpp.d  moc_VpnPage.cpp  moc_VpnPage.cpp.d
build-int-dbg/linux-service-dashboard_autogen/UVLADIE3JM/: moc_MainWindow.cpp.d
build-int-dbg/provider-parser-tests_autogen/: deps  moc_predefs.h
build-int-dbg/provider-parser-tests_autogen/include/: test_provider_parsers.moc  test_provider_parsers.moc.d
build-int/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-int/Testing/Temporary/: CTestCostData.txt
build-int/linux-service-dashboard-smart-helper_autogen/: deps  moc_predefs.h
build-int/linux-service-dashboard_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-int/linux-service-dashboard_autogen/3YJK5W5UP7/: qrc_resources.cpp
build-int/linux-service-dashboard_autogen/GQ6NBGVJMG/: moc_DockerProvider.cpp  moc_DockerProvider.cpp.d  moc_MountProvider.cpp  moc_MountProvider.cpp.d  moc_NetworkProvider.cpp  moc_NetworkProvider.cpp.d  moc_SensorProvider.cpp  moc_SensorProvider.cpp.d  moc_SmartProvider.cpp  moc_SmartProvider.cpp.d  moc_SystemdServiceProvider.cpp.d
build-int/linux-service-dashboard_autogen/M4YTXQ7V2H/: moc_DiskModel.cpp.d  moc_DockerContainerModel.cpp  moc_DockerContainerModel.cpp.d  moc_MountModel.cpp.d  moc_SensorModel.cpp  moc_SensorModel.cpp.d  moc_ServiceModel.cpp.d
build-int/linux-service-dashboard_autogen/PRMOGMWJPH/: moc_CommandRunner.cpp  moc_CommandRunner.cpp.d  moc_RefreshScheduler.cpp  moc_RefreshScheduler.cpp.d  moc_SmartRefreshScheduler.cpp  moc_SmartRefreshScheduler.cpp.d
build-int/linux-service-dashboard_autogen/RZ4CM6YYJ6/: moc_ConfirmActionDialog.cpp.d  moc_DisksPage.cpp  moc_DisksPage.cpp.d  moc_DockerPage.cpp.d  moc_LogViewerDialog.cpp  moc_LogViewerDialog.cpp.d  moc_MountsPage.cpp.d  moc_OverviewPage.cpp  moc_OverviewPage.cpp.d  moc_SensorsPage.cpp  moc_SensorsPage.cpp.d  moc_SettingsPage.cpp  moc_SettingsPage.cpp.d  moc_SystemdPage.cpp  moc_SystemdPage.cpp.d  moc_VpnPage.cpp.d
build-int/linux-service-dashboard_autogen/UVLADIE3JM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build-int/provider-parser-tests_autogen/: deps  moc_predefs.h
build-int/provider-parser-tests_autogen/include/: test_provider_parsers.moc.d
packaging/: PKGBUILD
resources/: io.github.Adiker.LinuxServiceDashboard.desktop  io.github.Adiker.LinuxServiceDashboard.smart-helper.policy.in  resources.qrc
src/: AppIcon.cpp  AppIcon.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: CommandResult.h  CommandRunner.cpp  CommandRunner.h  ModuleSettings.cpp  ModuleSettings.h  MountProfileStore.cpp  MountProfileStore.h  RefreshScheduler.cpp  RefreshScheduler.h  ServiceGroupSettings.cpp  ServiceGroupSettings.h  SmartHistoryStore.cpp  SmartHistoryStore.h  SmartRefreshScheduler.cpp  SmartRefreshScheduler.h
src/helpers/: SmartHelper.cpp
src/models/: DiskModel.cpp  DiskModel.h  DockerContainerModel.cpp  DockerContainerModel.h  MountModel.cpp  MountModel.h  SensorModel.cpp  SensorModel.h  ServiceModel.cpp  ServiceModel.h
src/parsers/: ProviderParsers.cpp  ProviderParsers.h
src/services/: DockerProvider.cpp  DockerProvider.h  MountProvider.cpp  MountProvider.h  NetworkProvider.cpp  NetworkProvider.h  SensorProvider.cpp  SensorProvider.h  SmartProvider.cpp  SmartProvider.h  SystemdServiceProvider.cpp  SystemdServiceProvider.h
src/utils/: FstabParser.cpp  FstabParser.h  JsonUtils.cpp  JsonUtils.h  StatusUtils.cpp  StatusUtils.h  TableLayoutPersistence.cpp  TableLayoutPersistence.h  TimeUtils.cpp  TimeUtils.h
src/widgets/: ConfirmActionDialog.cpp  ConfirmActionDialog.h  DisksPage.cpp  DisksPage.h  DockerPage.cpp  DockerPage.h  LogViewerDialog.cpp  LogViewerDialog.h  MountsPage.cpp  MountsPage.h  OverviewPage.cpp  OverviewPage.h  SensorsPage.cpp  SensorsPage.h  SettingsPage.cpp  SettingsPage.h  SystemdPage.cpp  SystemdPage.h  VpnPage.cpp  VpnPage.h
tests/: test_provider_parsers.cpp
